2002 Jun 4

    * STEnvironment: new methods -addObjectFinder:name:,
    -addObjectFinderWithName:, -removeObjectFinderWithName:;
    new method knownObjectNames;
    objectReferenceForObjectWithName: changed to use nil reference on
    known object that cannot be currently found
    * Finders: new directory containing object finders
    * STObjCRuntime: include selectors of metaclasses in 
    STAllObjectiveCSelectors()
    * Documentation/HowTo.txt: rewritten
    
2002 Jun 3

    * STFunctions: renamed "StepTalk/Config" directory to 
    "StepTalk/Configuration"; fixed bug in STFindAllResources (resourceDir
    was ignored)
    * STEnvironment: changed method allObjectsDictionary to allObjectNames
    
2002 May 30

    * STEnvironment: removed pools
    * STObjectReference: removed method initWithObjectName:pool:create:
    
2002 May 29
    
    * STExecutor: fixed typo
    * STEnvironment: new method -allObjectsDictionary that returns a NSDictionary
    with all named objects
    * STObjCRuntime: new function STAllObjectiveCSelectors
    
2002 May 24

    * STEngine: engineForLanguage: renamed to engineForLanguageWithName:.
    Some method documentation added.
    * STExecutor: reflect method renaming
    * STLanguage: read default language name from actual user defaults (not 
    from the StepTalk domain) and renamed the key to STDefaultLanguageName. 
    Renamed languageWithBundle: to languageWithPath:. Some method documentation 
    added.
    * STEnvironmentDescription: read default description name from actual user 
    defaults (not from the StepTalk domain)
    * STEnvironment: Some method documentation added.
    * StepTalk.gsdoc: new file

2002 May 13
    
    * Uploaded to the GNUstep CVS repository by Adam Fedor
    
2002 Apr 20

    * COPYING: updated
    * STExterns: Removed unused exceptions
    * STStructure: Changed exception to STInternalIncosistencyException
        
2002 Apr 13
