@@ -32,7 +32,6 @@ Smalltalk_OBJC_FILES = \
         SmalltalkEngine.m \
         NSArray+additions.m \
         NSNumber+additions.m \
-        NSObject+additions.m \
         STBlock.m \
         STBlockContext.m \
         STBytecodeInterpreter.m \
