@@ -10,7 +10,7 @@
     Behaviours =
     {
         "NSObject-operators" = {
-            Use = (Comparison);
+            Use = (Comparison, KeyValueCoding);
         }
     };
     
