@@ -1,0 +1,3 @@
+TODO list
+
+1 handle 'connection did die' notification for distant objects in STEnvironment
